--- a/src/styles/_countdown.scss
+++ b/src/styles/_countdown.scss
@@ -1,12 +1,20 @@
 .date-counter {
   font-family: $font-sans-serif;
-  font-size: 3rem;
+  font-size: 2rem;
   padding: 3rem;
   text-align: center;
 
+  @media screen and (min-width: 1200px) {
+    font-size: 3rem;
+  }
+
   p {
     font-family: $font-script;
-    font-size: 5rem;
+    font-size: 4rem;
     margin: 0;
+
+    @media screen and (min-width: 1200px) {
+      font-size: 5rem;
+    }
   }
 }
