--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -11,11 +11,21 @@
   &--heading {
     color: $color-mauve;
     font-size: 5rem;
+    margin: 2rem 0;
+
+    @media screen and (min-width: 1200px) {
+      margin: 5rem 0;
+    }
   }
 
   &--date,
   &--time,
   &--location {
     font-family: $font-sans-serif;
+    margin: 1rem 0;
+
+    @media screen and (min-width: 1200px) {
+      margin: 2rem 0;
+    }
   }
 }
