--- a/src/styles/_registry.scss
+++ b/src/styles/_registry.scss
@@ -1,4 +1,26 @@
+#registry {
+  div {
+    div {
+      @media screen and (min-width: 770px) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+    }
+  }
+}
+
 .registry-link {
   display: block;
   text-align: center;
+
+  @media screen and (min-width: 770px) {
+    display: inline-block;
+  }
+
+  &:nth-of-type(1) {
+    @media screen and (min-width: 770px) {
+      margin-left: 2rem;
+    }
+  }
 }
