new cursive font

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,5 +4,5 @@ $color-mauve: hsl(351, 23%, 52%);
 $color-sage: hsl(67, 24%, 28%);
 
 // Fonts
-$font-script: 'Great Vibes', sans-serif;
+$font-script: 'SugarScript', sans-serif;
 $font-sans-serif: 'Montserrat', sans-serif;
