add text for our story

--- a/src/styles/_registry.scss
+++ b/src/styles/_registry.scss
@@ -20,7 +20,7 @@
 
   &:nth-of-type(1) {
     @media screen and (min-width: 770px) {
-      margin-left: 2rem;
+      margin-right: 2rem;
     }
   }
 }
